# choui-the-no-gui-chatbot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: ai.rs  audio.rs  config.rs  gui.rs  lib.rs  main.rs  state.rs  twitch.rs  ui.rs  ws.rs
