[package]
name = "choui-the-no-gui-chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-ws = "0.3"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
url = "2.5"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
http = "1.2"
dotenv = "0.15"
ratatui = "0.27.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
tui-input = "0.9.0"
image = "0.25"
ratatui-image = { version = "1.0", features = ["crossterm"] }
